top banner added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
     <title>ABD Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to</h1>
-    <h1><span class="name-highlight">Abdullah's</span> Website</h1>
-    <p>Hi everyone i am <span class="name-highlight">Abdullah Ibne Ali</span>. I am a CSE graduate from North South Unuiversity. I am intrested in web developing. I love to make websites and add life to them. Currently learning ReactJs.</p>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="name-highlight">Abdullah's</span> Website</h1>
+            <p>Hi everyone i am <span class="name-highlight">Abdullah Ibne Ali</span>. I am a CSE graduate from North South Unuiversity. I am intrested in web developing. I love to make websites and add life to them. Currently learning ReactJs.</p>
+            <p>
+                My goal is to fullfill my clients requests and make beautiful websites for them. I can make fully functional front-end designs and make them interactive.
+
+            </p>
+            <a class="button purple" target="_blank" href="https://www.linkedin.com/in/abdullah-ibne-ali">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/abd2.png" alt="Photo of owner">
+        </div>
+    </section>
+    
 </body>
 </html>
