--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="name-highlight">Abdullah's</span> Website</h1>
-            <p>Hi everyone i am <span class="name-highlight">Abdullah Ibne Ali</span>. I am a CSE graduate from North South Unuiversity. I am intrested in web developing. I love to make websites and add life to them. Currently learning ReactJs.</p>
+            <h3>Proffesional Web Designer</h3>
+            <p>
+                Hi everyone i am <span class="name-highlight">Abdullah Ibne Ali</span>. I am a CSE graduate from North South Unuiversity. I am intrested in web developing. I love to make websites and add life to them. Currently learning ReactJs.</p>
             <p>
                 My goal is to fullfill my clients requests and make beautiful websites for them. I can make fully functional front-end designs and make them interactive.
-
             </p>
             <a class="button purple" target="_blank" href="https://www.linkedin.com/in/abdullah-ibne-ali">HIRE ME</a>
         </div>
@@ -26,6 +27,19 @@
             <img src="images/abd2.png" alt="Photo of owner">
         </div>
     </section>
-    
+
+
+    <!----------------------------  SECOND SECTION  ------------------------------------->
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/abd3-circle-ylw.png" alt="Photo of owner">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h1>
+            <h3>Become a Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma haw to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="button orange" target="_blank" href="https://drive.google.com/file/d/1zAB1IvV8a02VKtm0wDqJFFCvGo5NiAW9/view?usp=sharing">Download RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
