live server button added

--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
             <a class="button orange" target="_blank" href="https://drive.google.com/file/d/1zAB1IvV8a02VKtm0wDqJFFCvGo5NiAW9/view?usp=sharing">Download RESUME</a>
         </div>
     </section>
+    <footer>
+        <a class="button purple" target="_blank" href="https://abdullah1203.github.io/web-portfolio/">Live Server Link</a>
+    </footer>
 </body>
 </html>
