Experience section added, footer added and This is a complete template

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="images/dream-bg.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>ABD Portfolio</title>
+    <title>Sample_portfolio</title>
 </head>
 <body>
     <section class="top-banner">
@@ -34,15 +35,38 @@
         <div class="half-width">
             <img src="images/abd3-circle-ylw.png" alt="Photo of owner">
         </div>
-        <div class="half-width">
-            <h2>Dream Big</h1>
-            <h3>Become a Web Developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma haw to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <div class="half-width ver-center">
+            <h2>Life Goal</h1>
+            <h3>Become a Fullstack Web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach how to make simple website. I am learning ReactJS. Hopefully by middle of the year i will complete learning. Building demo websites , showcasing them in my portfolio is my target. Then i will learn Nodejs</p>
             <a class="button orange" target="_blank" href="https://drive.google.com/file/d/1zAB1IvV8a02VKtm0wDqJFFCvGo5NiAW9/view?usp=sharing">Download RESUME</a>
         </div>
     </section>
-    <footer>
-        <a class="button purple" target="_blank" href="https://abdullah1203.github.io/web-portfolio/">Live Server Link</a>
+    
+    <!--------------------EXPERIENCE---------------------------->
+    <section class="experience">
+        <h2 style="padding-left: 10px;">Experience</h2>
+        <div id="fullstack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="name-highlight">2019 - present | Wordpress and web developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p> 
+        </div> 
+        <div id="front-end" class="half-width single-experience">
+            <h2>Front-End Developer</h2>
+            <h3 class="name-highlight">2021-2022 | ReactJs Learner</h3>
+            <p>React makes it painless to create interactive UIs. Design simple views for each state in your application, and React will efficiently update and render just the right components when your data changes. React can also render on the server using Node and power mobile apps using React Native.</p> 
+    </section>
+
+
+    <footer class="tag-sec">
+        <p>© Abdullah Ibne Ali 2022, all rights reserved</p>
+        <hr>
+        <h4>Languages used in this template:</h4>
+
+        <a class="button yellow tags" target="_blank" href="https://www.w3schools.com/html/">HTML</a>
+        <a class="button green tags" target="_blank" href="https://www.w3schools.com/css/">CSS</a>
+        <br><br>
+        <a style="display: flex; justify-content: center; align-items: center; border-radius: 0px;" class="button purple tags" target="_blank" href="https://abdullah1203.github.io/web-portfolio/">Live Server Link</a>
     </footer>
 </body>
 </html>
