--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="half-width ver-center">
             <h2>Life Goal</h1>
             <h3>Become a Fullstack Web Developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach how to make simple website. I am learning ReactJS. Hopefully by middle of the year i will complete learning. Building demo websites , showcasing them in my portfolio is my target. Then i will learn Nodejs</p>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach how to make simple website. I am learning ReactJS. Hopefully by middle of the year i will complete learning. Building demo websites , showcasing them in my portfolio is my target. Then i will learn Nodejs.</p>
             <a class="button orange" target="_blank" href="https://drive.google.com/file/d/1zAB1IvV8a02VKtm0wDqJFFCvGo5NiAW9/view?usp=sharing">Download RESUME</a>
         </div>
     </section>
