--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="images/dream-bg.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Sample_portfolio</title>
+    <title>ABDullah Ibne Ali(UCon)</title>
 </head>
 <body>
     <section class="top-banner">
