--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="name-highlight">Abdullah's</span> Website</h1>
-            <h3>Proffesional Web Designer</h3>
+            <h3>Professional Web Designer</h3>
             <p>
                 Hi everyone i am <span class="name-highlight">Abdullah Ibne Ali</span>. I am a CSE graduate from North South Unuiversity. I am intrested in web developing. I love to make websites and add life to them. Currently learning ReactJs.</p>
             <p>
@@ -45,28 +45,61 @@
     
     <!--------------------EXPERIENCE---------------------------->
     <section class="experience">
-        <h2 style="padding-left: 10px;">Experience</h2>
+        <h2 style="padding-left: 20px;">Experience</h2>
         <div id="fullstack" class="half-width single-experience">
-            <h2>Full Stack Web Developer</h2>
+            <h2>PSD to HTML</h2>
             <h3 class="name-highlight">2019 - present | Wordpress and web developer</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p> 
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I learned thi from IT institute. I have learned PSD to html design using HTML , CSS, BOOTSTRAP. I will give you 100% web solution.</p> 
         </div> 
         <div id="front-end" class="half-width single-experience">
             <h2>Front-End Developer</h2>
             <h3 class="name-highlight">2021-2022 | ReactJs Learner</h3>
             <p>React makes it painless to create interactive UIs. Design simple views for each state in your application, and React will efficiently update and render just the right components when your data changes. React can also render on the server using Node and power mobile apps using React Native.</p> 
+        </div>
     </section>
 
 
-    <footer class="tag-sec">
-        <p>© Abdullah Ibne Ali 2022, all rights reserved</p>
-        <hr>
-        <h4>Languages used in this template:</h4>
+    <!--------------------Projects---------------------------->
+    <section class="projects">
+        <h2 style="padding-left: 20px;">Projects</h2>
+        <div class="row">
+            <div class="column">
+              <div class="content project1">
+                <img src="images/demo1.png" alt="project thumb" style="width:100%">
+                <h3>Spotify Clone - Music Player</h3>
+                <p>HTML , CSS & Vanilla JS</p>
+                <a href="https://abdullah1203.github.io/Spotify-Clone/" class="name-highlight" style="text-decoration: none;" target="_blank">Visit</a>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content project2">
+              <img src="images/demo2.png" alt="project thumb" style="width:100%">
+                <h3>PandaMart - Ecommerce site</h3>
+                <p>HTML | CSS | BootStrap</p>
+                <a href="https://abdullah1203.github.io/Panda-Mart-AB/" class="name-highlight" style="text-decoration: none;" target="_blank">Visit</a>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content project3">
+              <img src="images/demo3.png" alt="project thumb" style="width:100%">
+                <h3>Countdown - Landing Page</h3>
+                <p>HTML , CSS & Vanilla JS</p>
+                <a href="https://abdullah1203.github.io/Birthday-Countdown/" class="name-highlight" style="text-decoration: none;" target="_blank">Visit</a>
+              </div>
+            </div>
+            <div class="column">
+              <div class="content project4">
+              <img src="images/demo4.png" alt="project thumb" style="width:100%">
+                <h3>E-Learning</h3>
+                <p>HTML | CSS | BOOTSTRAP | PHP</p>
+                <a href="" class="name-highlight" style="text-decoration: none;" target="_blank">Visit</a>
+              </div>
+            </div>
+          <!-- END GRID -->
+          </div>
+    </section>
 
-        <a class="button yellow tags" target="_blank" href="https://www.w3schools.com/html/">HTML</a>
-        <a class="button green tags" target="_blank" href="https://www.w3schools.com/css/">CSS</a>
-        <br><br>
-        <a style="display: flex; justify-content: center; align-items: center; border-radius: 0px;" class="button purple tags" target="_blank" href="https://abdullah1203.github.io/web-portfolio/">Live Server Link</a>
-    </footer>
+
+   
 </body>
 </html>
