Navbar added responsive checked part 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>ABDullah Ibne Ali(UCon)</title>
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner" id="1">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="name-highlight">Abdullah's</span> Website</h1>
@@ -31,7 +31,7 @@
 
 
     <!----------------------------  SECOND SECTION  ------------------------------------->
-    <section class="dream-area">
+    <section class="dream-area" >
         <div class="half-width">
             <img src="images/abd3-circle-ylw.png" alt="Photo of owner">
         </div>
@@ -44,8 +44,8 @@
     </section>
     
     <!--------------------EXPERIENCE---------------------------->
-    <section class="experience">
-        <h2 style="padding-left: 20px;">Experience</h2>
+    <section class="experience" id="2">
+        <h2 style="padding-left: 20px; width: 4%;">Experience</h2>
         <div id="fullstack" class="half-width single-experience">
             <h2>PSD to HTML</h2>
             <h3 class="name-highlight">2019 - present | Wordpress and web developer</h3>
@@ -60,8 +60,8 @@
 
 
     <!--------------------Projects---------------------------->
-    <section class="projects">
-        <h2 style="padding-left: 20px;">Projects</h2>
+    <section class="projects" id="3">
+        <h2 style="padding-left: 20px; width: 4%;">Projects</h2>
         <div class="row">
             <div class="column">
               <div class="content project1">
@@ -98,6 +98,19 @@
           <!-- END GRID -->
           </div>
     </section>
+    <section class="contact" id="4">
+        <div class="header">
+            <h1>Contact me</h1>
+            <p>For business or professional purpose.</p>
+            <p style="font-size: 16px;color: rgb(206, 206, 206);">abdullah.Ibneali152pro@gmail.com</p>
+          </div>
+    </section>
+    <div id="mySidenav" class="sidenav">
+        <a href="#1" id="about">About</a>
+        <a href="#2" id="experience">Experience</a>
+        <a href="#3" id="projects">Projects</a>
+        <a href="#4" id="contact">Contact</a>
+      </div>
 
 
    
