--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h1>Contact me</h1>
             <p>For business or professional purpose.</p>
             <img src="images/gmail.png" alt="gmail" class="gmail">
-            <p class="mail" id="text" onclick="copyElementText(this.id)">abdullah.Ibneali152pro@gmail.com</p>
+            <p class="mail" id="text" onclick="copyElementText(this.id)">abdullah.ibneali152pro@gmail.com</p>
 
           </div>
     </section>
